syntax = "proto3";
import "listing.proto";
import "order.proto";
import "modelcommon.proto";
package executionvenue;
option go_package="api";


message CreateAndRouteOrderParams{
    model.Side orderSide = 1;
    model.Decimal64 quantity = 2;
    model.Decimal64 price = 3;
    model.Listing listing = 4;
}

message OrderId {
    string orderId = 1;
}

message CancelOrderParams {
    string orderId = 1;
    model.Listing listing = 2;
}

service OrderRouter{
    rpc CreateAndRouteOrder(CreateAndRouteOrderParams) returns (OrderId) {};
    rpc CancelOrder(CancelOrderParams) returns (model.Empty) {};
} 


