syntax = "proto3";
import "listing.proto";
import "order.proto";
import "modelcommon.proto";
package executionvenue;


message CreateAndRouteOrderParams{
    model.Side orderSide = 1;
    model.Decimal64 quantity = 2;
    model.Decimal64 price = 3;
    model.Listing listing = 4;
    string originatingExecVenueId = 5;
}

message OrderId {
    string orderId = 1;
}

message CancelOrderParams {
    string orderId = 1;
    model.Listing listing = 2;
}

service ExecutionVenue{
    rpc CreateAndRouteOrder(CreateAndRouteOrderParams) returns (OrderId) {};
    rpc CancelOrder(CancelOrderParams) returns (model.Empty) {};
} 


