syntax = "proto3";
import "modelcommon.proto";

package model;
option go_package="model";

enum Side {
    BUY =0;
    SELL=1;
}


enum OrderStatus {
    NONE =0;
    LIVE =1;
    FILLED =2;
    CANCELLED =3;
}


message Ref {
    int32 version = 1;
    string id = 2;
}

message Order{
    int32 version = 1;
    string id = 2;
    Side side = 3;
    Decimal64 quantity = 4;
    Decimal64 price = 5;
    int32 listingId = 6;
    Decimal64 remainingQuantity=7;
    Decimal64 tradedQuantity=8;
    Decimal64 avgTradePrice=9;
    OrderStatus status=10;
    OrderStatus targetStatus=11;
    Timestamp created=12;
    string ownerId=13;
    string originatorId=14;
    string originatorRef=15;
    string rootOriginatorId=16;
    string rootOriginatorRef=17;
    Decimal64 lastExecQuantity = 18;
    Decimal64 lastExecPrice = 19;
    string    lastExecId = 20;
    Decimal64 exposedQuantity=21;
    string errorMessage=22;
    repeated Ref childOrdersRefs = 23;

}


